k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmu-api-items
  labels:
    app: rmu-api-items
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmu-api-items
  template:
    metadata:
      labels:
        app: rmu-api-items
    spec:
      containers:
      - name: rmu-api-items
        image: labcabrera/rmu-api-items:latest
        ports:
        - containerPort: 3006
