k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmu-api-items-service
spec:
  selector:
    app: rmu-api-items
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3006
  type: ClusterIP
